[package]
name = "rcf"
version = "3.0.0"
edition = "2021"

[profile.test]
opt-level = 3

[lib]
name = "rcflib"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/example.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num = "0.4"
rayon = "1.5"
rand = "*" 
rand_chacha = "0.3.0"
rand_core = "0.6"
parameterized_test = "0.1.0"