[package]
name = "rcf"
version = "4.0.0"
edition = "2021"
license = "Apache-2.0"

[profile.test]
opt-level = 3

[lib]
name = "rcflib"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/example.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num = "0.4.1"
rayon = "1.7"
rand = "*" 
rand_chacha = "0.3.1"
rand_core = "0.6.2"

[dev-dependencies]
parameterized_test = "0.1.0"
